examples/k53certbot.kubectl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: k53certbot
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: k53certbot
  template:
    metadata:
      labels:
        app: k53certbot
    spec:
      serviceAccountName: certbot-service
      containers:
        - name: k53certbot
          image: <REPLACE_WITH_YOUR_IMAGE>
          command:
            - k53certbot
          args:
            # Adjust as needed...
            - --debug
            - --provider
            - zerossl
# If you would like to backup your TLS files and have configured EFS, you
# can add something like this to store the directory on a persistent volume.
# If you have no backups the secrets will be regenerated when k53certbot
# runs
#          volumeMounts:
#            - name: persistent-storage
#              mountPath: /etc/letsencrypt
#      volumes:
#        - name: persistent-storage
#          persistentVolumeClaim:
#            claimName: efs-claim-kube-system-ns
      securityContext:
        fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes and AWS token files
